# kinetic

./: .gitignore  .gitlab-ci.yml  .ouroboros-state.json  .slam-map.json  404.html  Cargo.toml  LICENSE  Makefile  README.md  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-2e14c9ea.js  searchindex-39d86195.js  searchindex-e21be642.js  tarpaulin.toml  toc-2f1c048c.js  toc.html
api/: index.html
community/: changelog.html  contributing.html  faq.html
concepts/: collision-detection.html  coordinate-frames.html  forward-kinematics.html  glossary.html  inverse-kinematics.html  motion-planning.html  (+4 more)
crates/horus-kinetic/: Cargo.toml
crates/horus-kinetic/src/: lib.rs  messages.rs  planner_node.rs  scene_node.rs  servo_node.rs
crates/kinetic/: Cargo.toml
crates/kinetic-collision/: Cargo.toml
crates/kinetic-collision/src/: acm.rs  capt.rs  ccd.rs  check.rs  convex_backend.rs  lib.rs  lod.rs  mesh.rs  sdf.rs  self_collision.rs  soa.rs  sphere_model.rs  two_tier.rs  viz.rs
crates/kinetic-collision/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs
crates/kinetic-collision/tests/: completeness.rs
crates/kinetic-core/: Cargo.toml
crates/kinetic-core/src/: config.rs  constraint.rs  error.rs  frame_tree.rs  goal.rs  joint_values.rs  lib.rs  math.rs  pose.rs  trajectory.rs  twist.rs  wrench.rs
crates/kinetic-dynamics/: Cargo.toml
crates/kinetic-dynamics/src/: lib.rs
crates/kinetic-execution/: Cargo.toml
crates/kinetic-execution/src/: controller.rs  controller_types.rs  lib.rs  log.rs  realtime.rs  sim.rs  watchdog.rs
crates/kinetic-gpu/: Cargo.toml
crates/kinetic-gpu/src/: batch_fk.rs  collision_check.rs  cpu_fallback.rs  lib.rs  optimizer.rs  sdf.rs
crates/kinetic-gpu/src/shaders/: fk_gpu.wgsl  sdf_build.wgsl  trajectory_optimize.wgsl
crates/kinetic-gpu/tests/: test_gpu_comprehensive.rs
crates/kinetic-grasp/: Cargo.toml
crates/kinetic-grasp/src/: antipodal.rs  helpers.rs  lib.rs  quality.rs  side.rs  suction.rs  top_down.rs
crates/kinetic-kinematics/: Cargo.toml
crates/kinetic-kinematics/benches/: ik_solvers.rs
crates/kinetic-kinematics/src/: bio_ik.rs  cached_ik.rs  chain.rs  dls.rs  fabrik.rs  forward.rs  ik.rs  ikfast.rs  lib.rs  opw.rs  paden_kahan.rs  sqp.rs  subproblem.rs  workspace.rs
crates/kinetic-perception/: Cargo.toml
crates/kinetic-perception/benches/: perception.rs
crates/kinetic-perception/src/: colored.rs  depth.rs  lib.rs  objects.rs  octree.rs  pipeline.rs
crates/kinetic-planning/: Cargo.toml
crates/kinetic-planning/benches/: optimizers.rs
crates/kinetic-planning/src/: bi_rrt_star.rs  bitrrt.rs  cartesian.rs  chomp.rs  constrained_rrt.rs  constraint.rs  cost.rs  dual_arm.rs  est.rs  facade.rs  gcs.rs  iris.rs  kpiece.rs  lib.rs  pipeline.rs  plan_execute.rs  prm.rs  rrt.rs  rrt_star.rs  shortcut.rs  smooth.rs  stomp.rs
crates/kinetic-python/: Cargo.toml  kinetic.pyi  pyproject.toml
crates/kinetic-python/src/: convert.rs  dual_arm.rs  dynamics.rs  execution.rs  gpu.rs  jupyter.rs  lib.rs  move_group.rs  planner.rs  robot.rs  scene.rs  servo.rs  task.rs  trajectory.rs
crates/kinetic-python/tests/: test_e2e.py  test_kinetic.py  test_new_apis.py
crates/kinetic-reactive/: Cargo.toml
crates/kinetic-reactive/src/: filter.rs  lib.rs  policy.rs  servo.rs
crates/kinetic-robot/: Cargo.toml  FUZZING.md
crates/kinetic-robot/fuzz/: Cargo.toml
crates/kinetic-robot/fuzz/corpus/fuzz_config/: minimal.toml
crates/kinetic-robot/fuzz/corpus/fuzz_srdf/: minimal.xml
crates/kinetic-robot/fuzz/corpus/fuzz_urdf/: minimal.xml  two_link.xml
crates/kinetic-robot/fuzz/fuzz_targets/: fuzz_config.rs  fuzz_srdf.rs  fuzz_urdf.rs
crates/kinetic-robot/src/: config.rs  joint.rs  lib.rs  link.rs  mjcf_loader.rs  robot.rs  sdf_loader.rs  setup.rs  setup_tui.rs  srdf.rs  urdf_loader.rs
crates/kinetic-scene/: Cargo.toml
crates/kinetic-scene/src/: depth.rs  helpers.rs  lib.rs  octree.rs  pointcloud.rs  processing.rs
crates/kinetic-task/: Cargo.toml
crates/kinetic-task/src/: applications.rs  lib.rs  planners.rs  stage_engine.rs
crates/kinetic-trajectory/: Cargo.toml
crates/kinetic-trajectory/src/: blend.rs  export.rs  jerk_limited.rs  lib.rs  monitor.rs  spline.rs  totp.rs  trapezoidal.rs  validation.rs
crates/kinetic-viewer/: Cargo.toml
crates/kinetic-viewer/examples/: capture_screenshots.rs
crates/kinetic-viewer/src/: app.rs  collision_viz.rs  egui_ui.rs  gizmo.rs  gpu_buffers.rs  gpu_context.rs  interaction.rs  lib.rs  main.rs  perception_viz.rs  pipeline.rs  test_utils.rs  trajectory_viz.rs  web_export.rs  wgpu_renderer.rs
crates/kinetic-viewer/src/shaders/: line.wgsl  mesh.wgsl
crates/kinetic/benches/: collision.rs  fk.rs  full_pipeline.rs  ik.rs  motionbenchmaker.rs  planning.rs  reactive.rs  trajectory.rs
crates/kinetic/examples/: collision_check.rs  gpu_optimize.rs  grasp_planning.rs  hello_fk_ik.rs  multiple_ik.rs  panda_urdf.txt  plan_and_execute.rs  plan_simple.rs  plan_with_obstacles.rs  servo_loop.rs
crates/kinetic/src/: benchmark.rs  lib.rs
crates/kinetic/tests/: helpers.rs  test_01_kinematic_correctness.rs  test_02_joint_limit_enforcement.rs  test_03_collision_safety.rs  test_04_trajectory_safety.rs  test_05_planner_correctness.rs  test_06_execution_safety.rs  test_07_numerical_robustness.rs  test_08_robot_acceptance.rs  test_09_multi_robot.rs  test_10_regression_ci.rs  test_all_robots.rs  test_benchmarks.rs  test_boundary_conditions.rs  test_concurrency.rs  test_critical_fixes.rs  test_cross_validation.rs  test_dual_arm_integration.rs  test_dynamic_scene.rs  test_dynamics_integration.rs  test_e2e_applications.rs  test_e2e_execution.rs  test_e2e_pick_place.rs  test_edge_cases.rs  test_error_propagation.rs  test_execution_recovery.rs  test_failure_recovery.rs  test_fk_ik_validation.rs  test_gcs_planning.rs  test_goal_change.rs  test_gpu_optimizer.rs  test_high_dof.rs  test_ik_solver_selection.rs  test_long_duration_stability.rs  test_multi_robot.rs  test_multi_solution_ik.rs  test_nan_inf_inputs.rs  test_negative_inputs.rs  test_numerical_stability.rs  test_plan_simple.rs  (+17 more)
(+294 files in other folders)
