[package]
name = "kinetic-kinematics"
version = "0.1.0"
description = "Forward and inverse kinematics for KINETIC"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kinetic-core = { path = "../kinetic-core" }
kinetic-robot = { path = "../kinetic-robot" }
nalgebra = { workspace = true }
rand = { workspace = true }
