[package]
name = "kinetic-python"
version = "0.1.0"
description = "Python bindings for KINETIC via PyO3"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://gitlab.com/softmata/kinetic"

[lib]
name = "kinetic"
crate-type = ["cdylib"]

[dependencies]
kinetic-core = { path = "../kinetic-core" }
kinetic-robot = { path = "../kinetic-robot" }
kinetic-kinematics = { path = "../kinetic-kinematics" }
kinetic-collision = { path = "../kinetic-collision" }
kinetic-scene = { path = "../kinetic-scene" }
kinetic-planning = { path = "../kinetic-planning" }
kinetic-trajectory = { path = "../kinetic-trajectory" }
kinetic-reactive = { path = "../kinetic-reactive" }
kinetic-task = { path = "../kinetic-task" }
kinetic-grasp = { path = "../kinetic-grasp" }
kinetic-execution = { path = "../kinetic-execution" }
kinetic-dynamics = { path = "../kinetic-dynamics" }
kinetic-gpu = { path = "../kinetic-gpu" }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
thiserror = "2"
