[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kinetic"
version = "0.1.0"
description = "Python bindings for KINETIC motion planning"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = ["numpy>=1.20"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=7", "numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
