[package]
name = "kinetic-scene"
version = "0.1.0"
description = "Planning scene and world model for KINETIC"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kinetic-core = { path = "../kinetic-core" }
kinetic-robot = { path = "../kinetic-robot" }
kinetic-kinematics = { path = "../kinetic-kinematics" }
kinetic-collision = { path = "../kinetic-collision" }
kiddo = { workspace = true }
nalgebra = { workspace = true }
