[package]
name = "kinetic-task"
version = "0.1.0"
description = "Task planning primitives for KINETIC: pick, place, sequence"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kinetic-core = { path = "../kinetic-core" }
kinetic-robot = { path = "../kinetic-robot" }
kinetic-kinematics = { path = "../kinetic-kinematics" }
kinetic-planning = { path = "../kinetic-planning" }
kinetic-grasp = { path = "../kinetic-grasp" }
kinetic-scene = { path = "../kinetic-scene" }
kinetic-trajectory = { path = "../kinetic-trajectory" }
nalgebra = { workspace = true }
thiserror = { workspace = true }
